k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-hub
  labels:
    app: devops-hub
spec:
  type: ClusterIP
  selector:
    app: devops-hub
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
